--- a/Makefile.am
+++ b/Makefile.am
@@ -2,3 +2,8 @@ AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS  = -I m4
 
 SUBDIRS = data src
+
+sbin_SCRIPTS = tor_transparent_proxy.sh
+
+sudoersdir = $(sysconfdir)/sudoers.d/
+sudoers_DATA = status-area-applet-tor.sudoers
